@@ -1,6 +1,7 @@
 6 February 2020: George
 	- Fix num_reply_states and num_detached_states counting with
 	  serve_expired_callback.
+	- Cleaner code in mesh_serve_expired_lookup.
 
 6 February 2020: Wouter
 	- Fix num_reply_addr counting in mesh and tcp drop due to size
